--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Visio</title>
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+  <header>
+    <nav>
+      <div class="logo">
+        <img src="image/Visio_Logo_Black.png" alt="Visio Logo">
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">The Visio difference</a></li>
+        <li><a href="#">Meet the Visio team</a></li>
+        <li><a href="#">Our funds and investments</a></li>
+      </ul>
+      <div class="hamburger">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <img src="image/sergey-pesterev-FRMt.png" alt="Hero Image">
+      <div class="hero-text">
+        <h1>Look beyond the ordinary</h1>
+      </div>
+    </section>
+
+    <!-- Additional sections will go here -->
+  </main>
+
+  <footer>
+    <!-- Footer content will go here -->
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
